--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,12 @@ body {
     top: 0;
     left: 0;
     background-color: #94A38F;
-    color: white;
+    color: black;
 }
 
 .splash-container header a:hover {
     color: #3A4454;
+    border-bottom: 1px solid #3A4454;
 }
 
 .menu {
@@ -43,7 +44,7 @@ body {
     top: 0%;
     left: 0%;
     background-color: #69776C;
-    color: white;
+    color: black;
     display: none;
 }
 
@@ -55,7 +56,7 @@ body {
 
 .about-container {
     background-color: #94A38F;
-    color: white;
+    color: black;
 }
 
 .about-container h2 {
@@ -83,7 +84,7 @@ body {
 
 .card {
     background-color: #94A38F;
-    color: white;
+    color: black;
     box-shadow: 4px 4px 10px #C0ABC4;
 }
 
@@ -97,7 +98,7 @@ body {
 
 .card button,
 .card a {
-    background-color: #917C78;
+    background-color: #493E3C;
     color: white;
     transition: background-color, 0.5s;
     transition: color, 0.5s;
@@ -113,7 +114,7 @@ body {
 
 .contact-container {
     background-color: #94A38F;
-    color: white;
+    color: black;
 }
 
 .contact-container h2 {
